--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
-name=AITinkr AIOT V2 Library
+name=AITINKR_AIOT_V2
 version=1.0.0
 author=Naveen Ayyagalla
 maintainer=SchoolForAI
 sentence=Library for controlling motors, servos, and buttons using the AITinkr AIOT V2.
 paragraph=The AITinkr AIOT V2 library simplifies motor control, servo handling, and button input for various projects, making it ideal for robotics and automation.
 category=Device Control
-url= 
+url= https://github.com/AITINKR/AITINKR_AIOT_V2
 architectures=*
