--- a/library.properties
+++ b/library.properties
@@ -1,7 +1,7 @@
 name=AITINKR_AIOT_V2
 version=1.0.0
-author=Naveen Ayyagalla
-maintainer=SchoolForAI
+author=SchoolForAI
+maintainer=AITINKR
 sentence=Library for controlling motors, servos, and buttons using the AITinkr AIOT V2.
 paragraph=The AITinkr AIOT V2 library simplifies motor control, servo handling, and button input for various projects, making it ideal for robotics and automation.
 category=Device Control
